<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:padding="@dimen/size10dp"
        android:background="@color/backgroundBlue"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:text="@string/tenmonan"
            android:layout_weight="1"
            android:textSize="@dimen/size18sp"
            android:textStyle="bold"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/themsoluong"
            android:layout_weight="1"
            android:textSize="@dimen/size18sp"
            android:textStyle="bold"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/giatien"
            android:layout_weight="1"
            android:textSize="@dimen/size18sp"
            android:textStyle="bold"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <GridView
        android:layout_width="match_parent"
        android:id="@+id/gvThanhToan"
        android:layout_weight="1"
        android:numColumns="1"
        android:layout_height="wrap_content" >

    </GridView>

    <TextView
        android:layout_width="wrap_content"
        android:id="@+id/txtTongTien"
        android:text="@string/tongtien"
        android:textStyle="bold"
        android:textSize="@dimen/size18sp"
        android:layout_marginLeft="@dimen/size10dp"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:id="@+id/btnThanhToan"
            android:text="@string/thanhtoan"
            android:layout_weight="1"
            android:background="@drawable/bo_vien_button"
            android:layout_margin="@dimen/size10dp"
            android:layout_height="wrap_content">

        </Button>

        <Button
            android:layout_width="wrap_content"
            android:id="@+id/btnThoatThanhToan"
            android:text="@string/thoatthanhtoan"
            android:layout_weight="1"
            android:background="@drawable/bo_vien_button"
            android:layout_margin="@dimen/size10dp"
            android:layout_height="wrap_content">

        </Button>
    </LinearLayout>


</LinearLayout>