<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:padding="@dimen/size10dp"
        android:layout_margin="@dimen/size10dp"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:id="@+id/txtTenMonAnThanhToan"
            android:text="@string/tenmonan"
            android:layout_weight="1"   
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="match_parent"
            android:id="@+id/txtSoLuongThanhToan"
            android:text="@string/themsoluong"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="match_parent"
            android:id="@+id/txtGiaTienThanhToan"
            android:text="@string/giatien"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</LinearLayout>