<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <TextView
        android:layout_width="wrap_content"
        android:textSize="@dimen/size30sp"
        android:textStyle="bold"
        android:text="@string/nameapp"
        android:layout_above="@+id/lnDangNhap"
        android:layout_centerHorizontal="true"
        android:padding="@dimen/size10dp"
        android:layout_marginBottom="@dimen/size30dp"
        android:textColor="@color/nameapp"
        android:layout_height="wrap_content">
        
    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/lnDangNhap"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"  >

        <EditText
            android:layout_width="match_parent"
            android:id="@+id/edtTenDangNhapDN"
            android:hint="@string/tendangnhap"
            android:padding="@dimen/size10dp"
            android:layout_marginLeft="@dimen/size10dp"
            android:layout_marginRight="@dimen/size10dp"
            android:layout_marginBottom="@dimen/size10dp"
            android:background="@drawable/bo_vien"
            android:drawableLeft="@drawable/user"
            android:drawablePadding="@dimen/size10dp"
            android:singleLine="true"
            android:layout_height="wrap_content">

        </EditText>


        <EditText
            android:layout_width="match_parent"
            android:id="@+id/edtMatKhauDN"
            android:hint="@string/matkhau"
            android:padding="@dimen/size10dp"
            android:layout_marginLeft="@dimen/size10dp"
            android:layout_marginRight="@dimen/size10dp"
            android:layout_marginBottom="@dimen/size10dp"
            android:background="@drawable/bo_vien"
            android:drawableLeft="@drawable/password"
            android:drawablePadding="@dimen/size10dp"
            android:singleLine="true"
            android:password="true"
            android:layout_height="wrap_content">

        </EditText>


        <Button
            android:layout_width="match_parent"
            android:id="@+id/btnLogin"
            android:background="@drawable/bo_vien_button"
            android:text="@string/login"
            android:padding="@dimen/size10dp"
            android:layout_margin="@dimen/size10dp"
            android:layout_height="wrap_content">

        </Button>

            <Button
                android:layout_width="match_parent"
                android:id="@+id/btnRegisterDN"
                android:text="@string/signup"
                android:textStyle="normal"
                android:background="@drawable/bo_vien_button"
                android:layout_height="wrap_content">
            </Button>


    </LinearLayout>

    

</RelativeLayout>